<resources>
    <string name="app_name">P4Me</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Conferma Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Registrati</string>
    <string name="action_registra">Registra</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_data">Usa il formato GG/MM/AAAA</string>
    <string name="error_invalid_hour">Usa il formato Ora:Minuto</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_match_password">Passwords do not match.</string>
    <string name="error_no_type_account">Scegli la tipologia di account</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="plus_button">+</string>
    <string name="crea">Crea</string>
    <string name="delete">Cancella evento</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="data_evento">Data</string>
    <string name="ora_evento">Ora</string>
    <string name="luogo_evento">Luogo</string>
    <string name="luogo_evento_creation">Via Taldeitali 0 Citta</string>
    <string name="icona_login" />
    <string name="descrizione_evento">Descrizione</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gestione_bands">GestioneBands</string>
    <string name="tab_text_gb1">Accettate</string>
    <string name="tab_text_gb2">Proposte</string>
    <string name="tab_text_bh1">Ingaggi</string>
    <string name="tab_text_bh2">Disponibili</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bands_home">BandsHome</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_notifiche">Notifiche</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_caldendar">CaldendarActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="date_event">DateUtils.getGiorno(evento.data.DAY_OF_WEEK)+""+(DateUtils.formatDate(evento.data).split("/")[0])+""+DateUtils.getMese(DateUtils.formatDate(evento.data).split("/")[1])+""+"alle ore "+ "00:00"</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_draw_club">DrawClub</string>
    <string name="title_activity_draw_bands">DrawBands</string>
</resources>
