<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lagun.play4me4.EventCreationActivity">


    <ImageView
        android:id="@+id/image_event"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/icona_login" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/nome_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome_evento"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="239dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_date"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/icona_login" />

            <LinearLayout
                android:id="@+id/emal_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/start_date_widget"
                    android:layout_width="73dp"

                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/image_date"
                    android:weightSum="0.5">

                    <EditText
                        android:id="@+id/start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/start_date_widget"
                    android:weightSum="0.5">

                    <EditText
                        android:id="@+id/start_hour"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/registra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="14sp"
            android:text="@string/action_register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>
    <Button
        android:id="@+id/event_accept_buton"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.07"
        android:background="@color/colorPrimary"
        android:text="@string/crea"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

</LinearLayout>
